--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@ title: Home
     <a href="https://twitter.com/intent/tweet?url={{ site.url }}{{ post.url }}&text={{ post.title }}&via=sanlaxman"
        target="_blank">
       share it with your followers</a>
+      or 
+      <a href="https://twitter.com/sanlaxman">
+        follow me on Twitter</a>!
     <br>
   </div>
   {% endfor %}
